--- a/index.html
+++ b/index.html
@@ -75,33 +75,130 @@
         </div>
       </nav>
       <!-- main page content  -->
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <div class="card">
-              <div class="card-header">Featured</div>
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">
-                  With supporting text below as a natural lead-in to additional
-                  content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
+      <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="container-fluid py-5">
+          <h1 class="display-5 fw-bold">Range Input Palooza !</h1>
+          <p class="col-md-8 fs-4">
+            Changing up the style and behavior of range inputs with HTML, CSS
+            and Javascript
+          </p>
+        </div>
+      </div>
+      <!-- card group of eq size 
+       -->
+      <div class="card-group text-center">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Plain Out of the Box Range Input</h5>
+            <p class="card-text">&lt; input type="range" / &gt;</p>
+            <br />
+            <p class="card-text">
+              <small class="text-muted">
+                <a
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="btn btn-primary"
+                  >Go somewhere</a
+                ></small
+              >
+            </p>
           </div>
-          <div class="col">
-            <div class="card">
-              <div class="card-header">Featured</div>
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">
-                  With supporting text below as a natural lead-in to additional
-                  content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Input Range with value feedback</h5>
+            <p class="card-text">
+              Using CSS and JS to add a value display that moves with thumb
+            </p>
+            <p class="card-text">
+              <small class="text-muted">
+                <a
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="btn btn-primary"
+                  >Go somewhere</a
+                ></small
+              >
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Input Range with value feedback</h5>
+            <p class="card-text">
+              Using CSS and JS to add a value display that moves with thumb
+            </p>
+            <p class="card-text">
+              <small class="text-muted">
+                <a
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="btn btn-primary"
+                  >Go somewhere</a
+                ></small
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="card-group text-center">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Plain Out of the Box Range Input</h5>
+            <p class="card-text">&lt; input type="range" / &gt;</p>
+            <br />
+            <p class="card-text">
+              <small class="text-muted">
+                <a
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="btn btn-primary"
+                  >Go somewhere</a
+                ></small
+              >
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Input Range with value feedback</h5>
+            <p class="card-text">
+              Using CSS and JS to add a value display that moves with thumb
+            </p>
+            <p class="card-text">
+              <small class="text-muted">
+                <a
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="btn btn-primary"
+                  >Go somewhere</a
+                ></small
+              >
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Input Range with value feedback</h5>
+            <p class="card-text">
+              Using CSS and JS to add a value display that moves with thumb
+            </p>
+            <p class="card-text">
+              <small class="text-muted">
+                <a
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="btn btn-primary"
+                  >Go somewhere</a
+                ></small
+              >
+            </p>
           </div>
         </div>
       </div>
