--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="#"
+                  href="./slider-moving-value-label/val-with-thumb.html"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary"
-                  >Go somewhere</a
+                  >Go to Input Range with value feedback</a
                 ></small
               >
             </p>
