Site color palette

--- a/index.html
+++ b/index.html
@@ -206,14 +206,70 @@
       <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-          <p class="col-md-8 fs-4">
-            Using a series of utilities, you can create this jumbotron, just
-            like the one in previous versions of Bootstrap. Check out the
-            examples below for how you can remix and restyle it to your liking.
-          </p>
-          <button class="btn btn-primary btn-lg" type="button">
+          <p class="col-md-8 fs-4">Show some colors</p>
+          <h5>
+            Since it is almost 2023 using the Pantone Textile Cotton color of
+            the year Viva Magenta Color HEX #BB2649 / RGB (187, 38,
+            73)/rgba(187, 38, 73, 1)
+          </h5>
+          <div
+            class="viva-magenta"
+            style="background: #bb2649; height: 2em; width: 20em"
+          ></div>
+          <h5>Viva Magenta rgba(65, 203, 170, 0.1)</h5>
+          <div
+            class="viva-magenta"
+            style="background: rgba(187, 38, 73, 0.1); height: 2em; width: 20em"
+          ></div>
+          <br />
+          <h5>
+            Viva Magenta inverted #41cbaa /rgb(65, 203, 170)/ rgba(65, 203, 170,
+            1)
+          </h5>
+          <div
+            class="viva-magenta"
+            style="background: #41cbaa; height: 2em; width: 20em"
+          ></div>
+          <h5>Viva Magenta inverted rgba(65, 203, 170, 0.1)</h5>
+          <div
+            class="viva-magenta"
+            style="
+              background: rgba(65, 203, 170, 0.1);
+              height: 2em;
+              width: 20em;
+            "
+          ></div>
+          <br />
+          <br />
+          <h5>
+            Viva Magenta grayscale #797979 /rgb(121, 121, 121)/ rgba(121, 121,
+            121, 1)
+          </h5>
+          <div
+            class="viva-magenta"
+            style="background: #797979; height: 2em; width: 20em"
+          ></div>
+
+          <h5>Viva Magenta grayscale rgba(121, 121, 121, 0.1)</h5>
+          <div
+            class="viva-magenta"
+            style="
+              background: rgba(121, 121, 121, 0.1);
+              height: 2em;
+              width: 20em;
+            "
+          ></div>
+          <br />
+          <h5>
+            Mighty Slate HEX #566270 / RGB(85,98,112)/rgba(86, 98, 112, 1)
+          </h5>
+          <div
+            class="viva-magenta"
+            style="background: #566270; height: 2em; width: 20em"
+          ></div>
+          <!-- <button class="btn btn-primary btn-lg" type="button">
             Example button
-          </button>
+          </button> -->
         </div>
       </div>
     </div>
