making the bootstrap overides

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container-fluid">
       <!-- navbar -->
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button
@@ -75,7 +76,7 @@
         </div>
       </nav>
       <!-- main page content  -->
-      <div class="p-5 mb-4 bg-light rounded-3">
+      <div class="p-5 mb-4 rounded-3">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Range Input Palooza !</h1>
           <p class="col-md-8 fs-4">
@@ -117,7 +118,7 @@
                   href="./slider-moving-value-label/val-with-thumb.html"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="btn btn-primary"
+                  class="btn btn-primary viva-magenta"
                   >Go to Input Range with value feedback</a
                 ></small
               >
@@ -136,7 +137,7 @@
                   href="#"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="btn btn-primary"
+                  class="btn btn-primary viva-magenta"
                   >Go somewhere</a
                 ></small
               >
@@ -203,7 +204,7 @@
         </div>
       </div>
       <!-- jumbotron  -->
-      <div class="p-5 mb-4 bg-light rounded-3">
+      <div class="p-5 mb-4 rounded-3">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Custom jumbotron</h1>
           <p class="col-md-8 fs-4">Show some colors</p>
@@ -275,7 +276,7 @@
     </div>
 
     <!-- footer -->
-    <nav class="navbar bg-light">
+    <nav class="navbar">
       <div class="container-fluid">
         <span class="navbar-text"> Footer </span>
       </div>
