creating site specific styles

--- a/slider-moving-value-label/val-with-thumb.html
+++ b/slider-moving-value-label/val-with-thumb.html
@@ -15,8 +15,9 @@
   </head>
   <body>
     <!-- jumbotron  -->
-    <div class="p-5 mb-4 bg-light rounded-3">
-      <h1 class="display-5 fw-bold">Range slider</h1>
+    <div class="p-5 mb-4 rounded-3">
+      <h1 class="display-5 fw-bold">Range slider label</h1>
+      <h1 class="display-5 fw-bold">tracks with thumb!</h1>
       <div class="container-fluid py-5">
         <div class="range-container">
           <form action="">
