--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="#"
+                  href="./standard-range-input/standard-range-input.html"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary"
-                  >Go somewhere</a
+                  >Go to standard range input</a
                 ></small
               >
             </p>
