--- a/slider-moving-value-label/val-with-thumb.html
+++ b/slider-moving-value-label/val-with-thumb.html
@@ -24,6 +24,7 @@
             <input type="range" id="range" min="0" max="100" />
             <label for="range">50</label>
           </form>
+          <div>Volume Adjustment</div>
         </div>
         <!-- <button
           class="btn"
