ticks and labels

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary"
-                  >Go to standard range input</a
+                  >Go to standard range</a
                 ></small
               >
             </p>
@@ -108,37 +108,36 @@
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Input Range with value feedback</h5>
+            <h5 class="card-title">Input Range with tickmarks</h5>
             <p class="card-text">
-              Using CSS and JS to add a value display that moves with thumb
+              Using HTML datalist with options to add simple tickmarks
             </p>
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="./slider-moving-value-label/val-with-thumb.html"
+                  href="./range-input-with-ticks/range-input-ticks.html"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary viva-magenta"
-                  >Go to Input Range with value feedback</a
+                  >Go to Input Range with tickmarks</a
                 ></small
               >
             </p>
           </div>
         </div>
+
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Input Range with value feedback</h5>
-            <p class="card-text">
-              Using CSS and JS to add a value display that moves with thumb
-            </p>
+            <h5 class="card-title">Input Range with tickmarks and labels</h5>
+            <p class="card-text">Need to add some CSS for this one</p>
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="#"
+                  href="./range-input-with-ticks/range-input-ticks.html"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary viva-magenta"
-                  >Go somewhere</a
+                  >Go to Input Range with tickmarks</a
                 ></small
               >
             </p>
@@ -148,7 +147,7 @@
       <div class="card-group text-center">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Plain Out of the Box Range Input</h5>
+            <h5 class="card-title">Range Input</h5>
             <p class="card-text">&lt; input type="range" / &gt;</p>
             <br />
             <p class="card-text">
@@ -166,7 +165,7 @@
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Input Range with value feedback</h5>
+            <h5 class="card-title">Input Range</h5>
             <p class="card-text">
               Using CSS and JS to add a value display that moves with thumb
             </p>
@@ -185,18 +184,18 @@
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Input Range with value feedback</h5>
+            <h5 class="card-title">Input Range with floating value feedback</h5>
             <p class="card-text">
               Using CSS and JS to add a value display that moves with thumb
             </p>
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="#"
+                  href="./slider-moving-value-label/val-with-thumb.html"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="btn btn-primary"
-                  >Go somewhere</a
+                  class="btn btn-primary viva-magenta"
+                  >Go to Input Range with value feedback</a
                 ></small
               >
             </p>
