adding text or range input

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Range Input</h5>
-            <p class="card-text">&lt; input type="range" / &gt;</p>
+            <p class="card-text">TBD</p>
             <br />
             <p class="card-text">
               <small class="text-muted">
@@ -165,9 +165,9 @@
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Input Range</h5>
+            <h5 class="card-title">User gets to choose.</h5>
             <p class="card-text">
-              Using CSS and JS to add a value display that moves with thumb
+              User range input or text input box they will update one another!
             </p>
             <p class="card-text">
               <small class="text-muted">
