--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="#"
+                  href="./range-input-or-text-input/range-input-or-text-input.html"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary"
-                  >Go somewhere</a
+                  >Go to user choice input</a
                 ></small
               >
             </p>
