--- a/range-input-or-text-input/range-input-or-text-input.html
+++ b/range-input-or-text-input/range-input-or-text-input.html
@@ -10,15 +10,14 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="standard-range.css" />
+    <link rel="stylesheet" href="./range-input-or-text-input.css" />
     <title>Standard Range Slider</title>
   </head>
   <body>
     <!-- jumbotron  -->
     <div class="p-5 mb-4 rounded-3">
-      <h1 class="display-5 fw-bold">Range or</h1>
+      <h1 class="display-5 fw-bold">Range or text input</h1>
 
-      <h1 class="display-5 fw-bold">text input</h1>
       <div class="container-fluid py-5">
         <div class="range-container">
           <form action="">
@@ -61,7 +60,7 @@
                   <div class="row gx-5">
                     <div class="d-grid gap-2 col-6 mx-auto">
                       <button
-                        class="p-3 border bg-light text-center"
+                        class="btn btn-primary viva-magenta"
                         id="calculate"
                         type="button"
                       >
