styled input text box

--- a/range-input-or-text-input/range-input-or-text-input.html
+++ b/range-input-or-text-input/range-input-or-text-input.html
@@ -26,7 +26,9 @@
                 <div>
                   <div class="input-group-text">
                     <!-- the "for on the label puts matching ID into focus" -->
-                    <label for="savingsRangeInput">Savings goal $ </label>
+                    <label for="savingsRangeInput" class="input-label"
+                      >Savings goal $
+                    </label>
                     <input
                       id="savingsRange"
                       type="range"
@@ -47,6 +49,7 @@
                         id="savingsRangeInput"
                         name="price"
                         value="10000"
+                        class="input-box"
                       />
                     </div>
                   </div>
