--- a/index.html
+++ b/index.html
@@ -185,17 +185,19 @@
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Range Input</h5>
-            <p class="card-text">TBD</p>
+            <h5 class="card-title">Range Input Styled Up !</h5>
+            <p class="card-text">
+              Custom track ticks, user choice input -so fancy
+            </p>
             <br />
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="#"
+                  href="./range-ticks-progress-labels-fancy/range-fancy.html"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary"
-                  >Go somewhere</a
+                  >Go to fancy Input Range</a
                 ></small
               >
             </p>
