--- a/range-ticks-progress-labels-fancy/range-fancy.html
+++ b/range-ticks-progress-labels-fancy/range-fancy.html
@@ -24,20 +24,12 @@
             <div class="container px-4">
               <div class="row gx-5">
                 <div class="d-grid gap-2 col-6 mx-auto">
-                  <button
-                    class="p-3 border bg-light text-center"
-                    id="calculate"
-                    type="button"
-                  >
+                  <button class="btn btn-primary" id="calculate" type="button">
                     Calculate
                   </button>
                 </div>
                 <div class="d-grid gap-2 col-6 mx-auto">
-                  <button
-                    class="p-3 border bg-light text-center"
-                    id="viewReport"
-                    type="button"
-                  >
+                  <button class="btn btn-primary" id="viewReport" type="button">
                     View Report
                   </button>
                 </div>
