adding stie specific styling

--- a/index.html
+++ b/index.html
@@ -16,65 +16,7 @@
   <body>
     <div class="container-fluid">
       <!-- navbar -->
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
-            </form>
-          </div>
-        </div>
-      </nav>
+      <nav class="navbar"></nav>
       <!-- main page content  -->
       <div class="p-5 mb-4 rounded-3">
         <div class="container-fluid py-5">
@@ -204,82 +146,12 @@
           </div>
         </div>
       </div>
-      <!-- jumbotron  -->
-      <div class="p-5 mb-4 rounded-3">
-        <div class="container-fluid py-5">
-          <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-          <p class="col-md-8 fs-4">Show some colors</p>
-          <h5>
-            Since it is almost 2023 using the Pantone Textile Cotton color of
-            the year Viva Magenta Color HEX #BB2649 / RGB (187, 38,
-            73)/rgba(187, 38, 73, 1)
-          </h5>
-          <div
-            class="viva-magenta"
-            style="background: #bb2649; height: 2em; width: 20em"
-          ></div>
-          <h5>Viva Magenta rgba(65, 203, 170, 0.1)</h5>
-          <div
-            class="viva-magenta"
-            style="background: rgba(187, 38, 73, 0.1); height: 2em; width: 20em"
-          ></div>
-          <br />
-          <h5>
-            Viva Magenta inverted #41cbaa /rgb(65, 203, 170)/ rgba(65, 203, 170,
-            1)
-          </h5>
-          <div
-            class="viva-magenta"
-            style="background: #41cbaa; height: 2em; width: 20em"
-          ></div>
-          <h5>Viva Magenta inverted rgba(65, 203, 170, 0.1)</h5>
-          <div
-            class="viva-magenta"
-            style="
-              background: rgba(65, 203, 170, 0.1);
-              height: 2em;
-              width: 20em;
-            "
-          ></div>
-          <br />
-          <br />
-          <h5>
-            Viva Magenta grayscale #797979 /rgb(121, 121, 121)/ rgba(121, 121,
-            121, 1)
-          </h5>
-          <div
-            class="viva-magenta"
-            style="background: #797979; height: 2em; width: 20em"
-          ></div>
-
-          <h5>Viva Magenta grayscale rgba(121, 121, 121, 0.1)</h5>
-          <div
-            class="viva-magenta"
-            style="
-              background: rgba(121, 121, 121, 0.1);
-              height: 2em;
-              width: 20em;
-            "
-          ></div>
-          <br />
-          <h5>
-            Mighty Slate HEX #566270 / RGB(85,98,112)/rgba(86, 98, 112, 1)
-          </h5>
-          <div
-            class="viva-magenta"
-            style="background: #566270; height: 2em; width: 20em"
-          ></div>
-          <!-- <button class="btn btn-primary btn-lg" type="button">
-            Example button
-          </button> -->
-        </div>
-      </div>
     </div>
 
     <!-- footer -->
     <nav class="navbar">
       <div class="container-fluid">
-        <span class="navbar-text"> Footer </span>
+        <span class="navbar-text"> </span>
       </div>
     </nav>
     <script
