--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   </head>
   <body>
     <div class="container-fluid">
-      <!-- navbar -->
-      <nav class="navbar"></nav>
       <!-- main page content  -->
       <div class="p-5 mb-4 rounded-3">
         <div class="container-fluid py-5">
@@ -151,7 +149,16 @@
     <!-- footer -->
     <nav class="navbar">
       <div class="container-fluid">
-        <span class="navbar-text"> </span>
+        <div class="navbar-text">
+          Check out my repo !
+          <a
+            class="btn btn-primary btn-lg rounded-pill"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://arottler.com/"
+            >💦👩‍⚕️💦
+          </a>
+        </div>
       </div>
     </nav>
     <script
