--- a/index.html
+++ b/index.html
@@ -150,12 +150,22 @@
     <nav class="navbar">
       <div class="container-fluid">
         <div class="navbar-text">
-          Check out my repo !
+          Check out my portfolio !
           <a
             class="btn btn-primary btn-lg rounded-pill"
             target="_blank"
             rel="noopener noreferrer"
             href="https://arottler.com/"
+            >💦👩‍⚕️💦
+          </a>
+        </div>
+        <div class="navbar-text">
+          Check out my repo !
+          <a
+            class="btn btn-primary btn-lg rounded-pill"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://github.com/AR123456"
             >💦👩‍⚕️💦
           </a>
         </div>
