--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link
+      href="vendor/font-awesome/css/font-awesome.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Range Palooza</title>
   </head>
@@ -150,13 +155,25 @@
     <nav class="navbar">
       <div class="container-fluid">
         <div class="navbar-text">
-          Check out my repo !
+          Check out my portfolio !
           <a
             class="btn btn-primary btn-lg rounded-pill"
             target="_blank"
             rel="noopener noreferrer"
             href="https://arottler.com/"
             >💦👩‍⚕️💦
+          </a>
+        </div>
+        <div class="navbar-text">
+          Check out my repo !
+          <a
+            class="btn rounded-pill"
+            style="padding: 0"
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://github.com/AR123456"
+          >
+            <img class="footer-icon" src="./img/github.png" alt="GitHub" />
           </a>
         </div>
       </div>
