--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link
-      href="vendor/font-awesome/css/font-awesome.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
     <link rel="stylesheet" href="style.css" />
     <title>Range Palooza</title>
   </head>
@@ -167,13 +162,11 @@
         <div class="navbar-text">
           Check out my repo !
           <a
-            class="btn rounded-pill"
-            style="padding: 0"
+            class="btn btn-primary btn-lg rounded-pill"
             target="_blank"
             rel="noopener noreferrer"
             href="https://github.com/AR123456"
-          >
-            <img class="footer-icon" src="./img/github.png" alt="GitHub" />
+            >💦👩‍⚕️💦
           </a>
         </div>
       </div>
