work on footere

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link
+      href="vendor/font-awesome/css/font-awesome.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Range Palooza</title>
   </head>
   <body>
     <div class="container-fluid">
       <!-- main page content  -->
-      <div class="p-5 mb-4 rounded-3">
+      <div class="p-3 mb-4 rounded-3">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Range Input Palooza !</h1>
           <p class="col-md-8 fs-4">
@@ -162,11 +167,13 @@
         <div class="navbar-text">
           Check out my repo !
           <a
-            class="btn btn-primary btn-lg rounded-pill"
+            class="btn rounded-pill"
+            style="padding: 0"
             target="_blank"
             rel="noopener noreferrer"
             href="https://github.com/AR123456"
-            >💦👩‍⚕️💦
+          >
+            <img class="footer-icon" src="./img/github.png" alt="GitHub" />
           </a>
         </div>
       </div>
