text or slider input

--- a/range-input-with-ticks-and-labels/range-input-ticks-and-labels.html
+++ b/range-input-with-ticks-and-labels/range-input-ticks-and-labels.html
@@ -18,7 +18,7 @@
     <div class="p-5 mb-4 rounded-3">
       <h1 class="display-5 fw-bold">To get some labels going</h1>
 
-      <h1 class="display-5 fw-bold">to need some CSS!</h1>
+      <h1 class="display-5 fw-bold">will need need some CSS!</h1>
       <div class="container-fluid py-5">
         <div class="range-container">
           <label for="volume">Volume Adjustment</label>
