clean up naming

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="./standard-range-input/standard-range-input.html"
+                  href="./standard/standard.html"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary"
