--- a/range-ticks-progress-labels-fancy/range-fancy.html
+++ b/range-ticks-progress-labels-fancy/range-fancy.html
@@ -360,6 +360,6 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
-    <script src="appFancy.js"></script>
+    <script src="appfancy.js"></script>
   </body>
 </html>
