--- a/standard/standard.html
+++ b/standard/standard.html
@@ -10,12 +10,11 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-
     <link rel="stylesheet" href="standard.css" />
     <title>Standard Range Slider</title>
   </head>
   <body>
-    <!-- jumbotron  -->
+    <!-- DYI jumbotron  -->
     <div class="p-5 mb-4 rounded-3">
       <h1 class="display-5 fw-bold">Input type of range</h1>
       <h2 class="display-5 fw-bold">&lt; input type="range" / &gt;</h2>
@@ -24,7 +23,6 @@
         <div class="range-container">
           <form action="">
             <p>Volume Adjustment</p>
-
             <input
               type="range"
               id="volume"
@@ -33,20 +31,8 @@
               max="1000"
               value="10"
             />
-            <!-- <label for="volume">10</label> -->
-          </form>
+                 </form>
         </div>
-        <!-- <button
-                class="btn"
-                type="button"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Back to Main page
-              </button> -->
-      </div>
     </div>
-    <script src="standard-range.js"></script>
   </body>
 </html>
