--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="./range-input-or-text-input/range-input-or-text-input.html"
+                  href="./text-or-thumb/text-or-thumb.html"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary"
@@ -134,7 +134,7 @@
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="./range-ticks-progress-labels-fancy/range-fancy.html"
+                  href="./fancy/range-fancy.html"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary"
