another card group center

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -79,6 +79,66 @@
                   rel="noopener noreferrer"
                   class="btn btn-primary viva-magenta"
                   >Go to Input Range with tickmarks</a
+                ></small
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="card-group text-center">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">User gets to choose.</h5>
+            <p class="card-text">
+              User range input or text input box they will update one another!
+            </p>
+            <p class="card-text">
+              <small class="text-muted">
+                <a
+                  href="./text-or-thumb/text-or-thumb.html"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="btn btn-primary"
+                  >Go to user choice input</a
+                ></small
+              >
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Input Range with floating value feedback</h5>
+            <p class="card-text">
+              Using CSS and JS to add a value display that moves with thumb
+            </p>
+            <p class="card-text">
+              <small class="text-muted">
+                <a
+                  href="./val-with-thumb/val-with-thumb.html"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="btn btn-primary viva-magenta"
+                  >Go to Input Range with value feedback</a
+                ></small
+              >
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Range Input Styled Up !</h5>
+            <p class="card-text">
+              Custom track ticks, user choice input -so fancy
+            </p>
+            <br />
+            <p class="card-text">
+              <small class="text-muted">
+                <a
+                  href="./fancy/range-fancy.html"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="btn btn-primary"
+                  >Go to fancy Input Range</a
                 ></small
               >
             </p>
