remove end card body last div

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Range Input Styled Up !</h5>
+            <!-- <h5 class="card-title">Range Input Styled Up !</h5>
             <p class="card-text">
               Custom track ticks, user choice input -so fancy
             </p>
@@ -201,7 +201,7 @@
                   >Go to fancy Input Range</a
                 ></small
               >
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
