remove first card body

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="card-group text-center">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">User gets to choose.</h5>
+            <!-- <h5 class="card-title">User gets to choose.</h5>
             <p class="card-text">
               User range input or text input box they will update one another!
             </p>
@@ -162,14 +162,14 @@
                   >Go to user choice input</a
                 ></small
               >
-            </p>
+            </p> -->
           </div>
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Input Range with floating value feedback</h5>
+            <h5 class="card-title">Filling Ball Visual Slider</h5>
             <p class="card-text">
-              Using CSS and JS to add a value display that moves with thumb
+              Using CSS and JS to fill water globe as value increases
             </p>
             <p class="card-text">
               <small class="text-muted">
