--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <p class="card-text">
               <small class="text-muted">
                 <a
-                  href="./val-with-thumb/val-with-thumb.html"
+                  href="./water-wave-slider-input/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn btn-primary viva-magenta"
