--- a/index.html
+++ b/index.html
@@ -147,23 +147,7 @@
       </div>
       <div class="card-group text-center">
         <div class="card">
-          <div class="card-body">
-            <!-- <h5 class="card-title">User gets to choose.</h5>
-            <p class="card-text">
-              User range input or text input box they will update one another!
-            </p>
-            <p class="card-text">
-              <small class="text-muted">
-                <a
-                  href="./text-or-thumb/text-or-thumb.html"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="btn btn-primary"
-                  >Go to user choice input</a
-                ></small
-              >
-            </p> -->
-          </div>
+          <div class="card-body"></div>
         </div>
         <div class="card">
           <div class="card-body">
