--- a/index.html
+++ b/index.html
@@ -169,24 +169,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card-body">
-            <!-- <h5 class="card-title">Range Input Styled Up !</h5>
-            <p class="card-text">
-              Custom track ticks, user choice input -so fancy
-            </p>
-            <br />
-            <p class="card-text">
-              <small class="text-muted">
-                <a
-                  href="./fancy/range-fancy.html"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="btn btn-primary"
-                  >Go to fancy Input Range</a
-                ></small
-              >
-            </p> -->
-          </div>
+          <div class="card-body"></div>
         </div>
       </div>
     </div>
